# Macintosh-PiForma-docs-viewer

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
public/: home-stack-icons.js
public/icons/home-stack/: README.txt  hardware.png.b64  home-stack-sprite.txt
scripts/: build-docs-snapshot.mjs
src/: content.ts  main.ts  platform.ts  stacks.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: docs_cache.rs  lib.rs  main.rs
